--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,10 +14,14 @@ html {
     font-size: 16px;
     line-height: 1.5;
     cursor: pointer;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 body {
     overflow-x: hidden;
+    width: 100%;
+    position: relative;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: var(--black);
